feat: 3D and minor fixes